@@ -13,7 +13,7 @@ recipe = dataflake.docbuilder
 eggs =  
   pkginfo
 sources =
-    http://svn.dataflake.org/svn/dataflake.docbuilder
+  http://svn.dataflake.org/svn/dataflake.docbuilder
 
 [docs]
 recipe = zc.recipe.egg
